--- a/src/views/htmlcontent/package.json
+++ b/src/views/htmlcontent/package.json
@@ -3,31 +3,31 @@
   "version": "1.0.0",
   "description": "",
   "dependencies": {
-    "@angular/common": "~2.1.2",
-    "@angular/compiler": "~2.1.2",
-    "@angular/core": "~2.1.2",
-    "@angular/forms": "~2.1.2",
+    "@angular/common": "~16.2.11",
+    "@angular/compiler": "~16.2.11",
+    "@angular/core": "~16.2.11",
+    "@angular/forms": "~16.2.11",
     "@angular/http": "~2.1.2",
-    "@angular/platform-browser": "~2.1.2",
-    "@angular/platform-browser-dynamic": "~2.1.2",
-    "@angular/router": "~3.1.2",
-    "@angular/upgrade": "~2.1.2",
-    "angular-in-memory-web-api": "~0.1.13",
-    "angular2-slickgrid": "github:microsoft/angular2-slickgrid#1.2.2",
-    "copy-paste": "1.3.0",
-    "core-js": "2.4.1",
-    "jasmine-core": "~2.4.1",
-    "moment": "2.15.1",
-    "rangy": "1.3.0",
-    "reflect-metadata": "0.1.12",
-    "rxjs": "5.0.0-beta.12",
-    "slickgrid": "github:anthonydresser/SlickGrid#2.3.23",
-    "systemjs": "0.19.40",
-    "systemjs-plugin-json": "0.2.0",
-    "underscore": "1.8.3",
-    "zone.js": "0.6.26"
+    "@angular/platform-browser": "~16.2.11",
+    "@angular/platform-browser-dynamic": "~16.2.11",
+    "@angular/router": "~16.2.11",
+    "@angular/upgrade": "~16.2.11",
+    "angular-in-memory-web-api": "~0.16.0",
+    "angular2-slickgrid": "github:microsoft/angular2-slickgrid#1.4.7",
+    "copy-paste": "1.5.3",
+    "core-js": "3.33.1",
+    "jasmine-core": "~5.1.1",
+    "moment": "2.29.4",
+    "rangy": "1.3.1",
+    "reflect-metadata": "0.1.13",
+    "rxjs": "7.8.1",
+    "slickgrid": "github:anthonydresser/SlickGrid#2.3.33",
+    "systemjs": "6.14.2",
+    "systemjs-plugin-json": "0.3.0",
+    "underscore": "1.13.6",
+    "zone.js": "0.14.1"
   },
   "devDependencies": {
-    "assert": "1.4.1"
+    "assert": "2.1.0"
   }
 }
