--- a/src/views/htmlcontent/package.json
+++ b/src/views/htmlcontent/package.json
@@ -1,6 +1,6 @@
 {
   "name": "htmlcontent",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
   "dependencies": {
     "@angular/common": "~16.2.11",
@@ -28,6 +28,29 @@
     "zone.js": "0.14.1"
   },
   "devDependencies": {
-    "assert": "2.1.0"
+    "assert": "2.1.0",
+    "typescript-esbuild": "0.3.1"
+  },
+  "homepage": "https://github.com/CodeEditorLand/CodeEditorLand#readme",
+  "bugs": {
+    "url": "https://github.com/CodeEditorLand/CodeEditorLand/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/CodeEditorLand/CodeEditorLand.git"
+  },
+  "license": "MIT",
+  "type": "module",
+  "private": "false",
+  "publishConfig": {
+    "access": "public"
+  },
+  "author": {
+    "name": "Nikola Hristov",
+    "email": "nikola@nikolahristov.tech",
+    "url": "https://nikolahristov.tech"
+  },
+  "scripts": {
+    "prepublishOnly": "TypeScriptESBuild Source/**/*.ts"
   }
 }
