--- a/src/views/htmlcontent/typings/jasmine/package.json
+++ b/src/views/htmlcontent/typings/jasmine/package.json
@@ -45,12 +45,15 @@
   "_spec": "@types/jasmine@^2.5.36",
   "_where": "/Users/anthonydresser/Documents/vscode-pgsql/src/views/htmlcontent",
   "author": {
-    "name": "Boris Yankov",
-    "email": "https://github.com/borisyankov/"
+    "name": "Nikola Hristov",
+    "email": "nikola@nikolahristov.tech",
+    "url": "https://nikolahristov.tech"
   },
-  "dependencies": {},
+  
   "description": "TypeScript definitions for Jasmine 2.5",
-  "devDependencies": {},
+  "devDependencies": {
+    "typescript-esbuild": "0.3.1"
+  },
   "directories": {},
   "dist": {
     "shasum": "15f16040b1106941ec4aeefa3cd9c55342a0dcbb",
@@ -70,10 +73,21 @@
   "readme": "ERROR: No README data found!",
   "repository": {
     "type": "git",
-    "url": "https://www.github.com/DefinitelyTyped/DefinitelyTyped.git"
+    "url": "git+https://github.com/CodeEditorLand/CodeEditorLand.git"
   },
-  "scripts": {},
+  "scripts": {
+    "prepublishOnly": "TypeScriptESBuild Source/**/*.ts"
+  },
   "typesPublisherContentHash": "342ad787ae1d9085f9cb2f352460449c601a7fbda833a19bb87aa2787dbc9ec3",
   "typings": "index.d.ts",
-  "version": "2.5.37"
+  "version": "0.0.1",
+  "homepage": "https://github.com/CodeEditorLand/CodeEditorLand#readme",
+  "bugs": {
+    "url": "https://github.com/CodeEditorLand/CodeEditorLand/issues"
+  },
+  "type": "module",
+  "private": "false",
+  "publishConfig": {
+    "access": "public"
+  }
 }
