--- a/package.json
+++ b/package.json
@@ -458,71 +458,71 @@
     "onCommand:extension.pgsql.newQuery"
   ],
   "dependencies": {
-    "applicationinsights": "^1.0.8",
-    "body-parser": "^1.15.2",
-    "comment-json": "^1.1.3",
-    "copy-paste": "^1.3.0",
-    "decompress": "^4.2.0",
-    "ejs": "^2.4.2",
-    "error-ex": "^1.3.0",
-    "express": "^4.13.3",
-    "figures": "^1.4.0",
-    "fs-extra-promise": "^0.3.1",
+    "applicationinsights": "1.0.8",
+    "body-parser": "1.15.2",
+    "comment-json": "1.1.3",
+    "copy-paste": "1.3.0",
+    "decompress": "4.2.0",
+    "ejs": "2.4.2",
+    "error-ex": "1.3.0",
+    "express": "4.13.3",
+    "figures": "1.4.0",
+    "fs-extra-promise": "0.3.1",
     "getmac": "1.2.1",
-    "http-proxy-agent": "^2.1.0",
-    "https-proxy-agent": "^2.2.1",
-    "jsonc-parser": "^1.0.0",
+    "http-proxy-agent": "2.1.0",
+    "https-proxy-agent": "2.2.1",
+    "jsonc-parser": "1.0.0",
     "opener": "1.4.2",
-    "plist": "^2.1.0",
-    "pretty-data": "^0.40.0",
-    "request": "^2.73.0",
+    "plist": "2.1.0",
+    "pretty-data": "0.40.0",
+    "request": "2.73.0",
     "semver": "https://registry.npmjs.org/semver/-/semver-5.0.3.tgz",
-    "tmp": "^0.0.28",
-    "underscore": "^1.8.3",
-    "vscode-extension-telemetry": "^0.1.1",
-    "vscode-languageclient": "^3.5.1",
-    "vscode-nls": "^2.0.2",
-    "ws": "^1.1.1"
+    "tmp": "0.0.28",
+    "underscore": "1.8.3",
+    "vscode-extension-telemetry": "0.1.1",
+    "vscode-languageclient": "3.5.1",
+    "vscode-nls": "2.0.2",
+    "ws": "1.1.1"
   },
   "devDependencies": {
-    "chai": "^3.5.0",
-    "coveralls": "^2.11.15",
-    "decache": "^4.1.0",
-    "del": "^2.2.1",
+    "chai": "3.5.0",
+    "coveralls": "2.11.15",
+    "decache": "4.1.0",
+    "del": "2.2.1",
     "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-clean-css": "^2.0.13",
-    "gulp-concat": "^2.6.0",
-    "gulp-filter": "^5.0.0",
-    "gulp-install": "^0.6.0",
+    "gulp-clean-css": "2.0.13",
+    "gulp-concat": "2.6.0",
+    "gulp-filter": "5.0.0",
+    "gulp-install": "0.6.0",
     "gulp-istanbul-report": "0.0.1",
-    "gulp-json-editor": "^2.2.1",
+    "gulp-json-editor": "2.2.1",
     "gulp-remote-src": "0.4.1",
-    "gulp-rename": "^1.2.2",
-    "gulp-shell": "^0.5.2",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-tslint": "^6.0.2",
-    "gulp-typescript": "^3.1.4",
-    "gulp-uglify": "^2.0.0",
-    "istanbul": "^0.4.5",
-    "jasmine-core": "~2.4.1",
-    "karma": "^1.3.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-coverage": "^1.1.1",
-    "karma-htmlfile-reporter": "^0.3.4",
-    "karma-jasmine": "^1.0.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-junit-reporter": "^1.1.0",
-    "karma-remap-istanbul": "^0.2.1",
-    "pm-mocha-jenkins-reporter": "^0.2.6",
-    "remap-istanbul": "^0.6.4",
-    "systemjs-builder": "^0.15.32",
-    "typemoq": "^1.7.0",
+    "gulp-rename": "1.2.2",
+    "gulp-shell": "0.5.2",
+    "gulp-sourcemaps": "1.6.0",
+    "gulp-tslint": "6.0.2",
+    "gulp-typescript": "3.1.4",
+    "gulp-uglify": "2.0.0",
+    "istanbul": "0.4.5",
+    "jasmine-core": "2.4.1",
+    "karma": "1.3.0",
+    "karma-chrome-launcher": "2.0.0",
+    "karma-coverage": "1.1.1",
+    "karma-htmlfile-reporter": "0.3.4",
+    "karma-jasmine": "1.0.2",
+    "karma-jasmine-html-reporter": "0.2.2",
+    "karma-junit-reporter": "1.1.0",
+    "karma-remap-istanbul": "0.2.1",
+    "pm-mocha-jenkins-reporter": "0.2.6",
+    "remap-istanbul": "0.6.4",
+    "systemjs-builder": "0.15.32",
+    "typemoq": "1.7.0",
     "typescript": "2.3.4",
     "typescript-esbuild": "0.3.6",
     "uglify-js": "mishoo/UglifyJS2#harmony-v2.8.22",
-    "vscode": "^1.0.5",
+    "vscode": "1.0.5",
     "vscode-nls-dev": "https://github.com/Raymondd/vscode-nls-dev/releases/download/2.0.2/build.tar.gz",
-    "xmldom": "^0.6.0",
+    "xmldom": "0.6.0",
     "yargs": "https://registry.npmjs.org/yargs/-/yargs-3.32.0.tgz"
   },
   "extensionDependencies": [
