--- a/Source/views/htmlcontent/typings/jasmine/package.json
+++ b/Source/views/htmlcontent/typings/jasmine/package.json
@@ -1,4 +1,49 @@
 {
+	"name": "@types/jasmine",
+	"version": "0.0.1",
+	"private": false,
+	"description": "TypeScript definitions for Jasmine 2.5",
+	"homepage": "https://github.com/CodeEditorLand/Foundation#readme",
+	"bugs": {
+		"url": "https://github.com/CodeEditorLand/Foundation/issues"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/CodeEditorLand/Foundation.git"
+	},
+	"license": "SEE LICENSE IN LICENSE",
+	"author": {
+		"name": "Playform",
+		"email": "Hello@Playform.Cloud",
+		"url": "https://playform.cloud"
+	},
+	"maintainers": [
+		{
+			"name": "types",
+			"email": "ryan.cavanaugh@microsoft.com"
+		}
+	],
+	"type": "module",
+	"main": "",
+	"typings": "index.d.ts",
+	"directories": {},
+	"scripts": {
+		"prepublishOnly": "TypeScriptESBuild 'Source/**/*.ts'"
+	},
+	"dependencies": {},
+	"devDependencies": {
+		"typescript-esbuild": "0.4.5"
+	},
+	"optionalDependencies": {},
+	"publishConfig": {
+		"access": "public"
+	},
+	"dist": {
+		"shasum": "15f16040b1106941ec4aeefa3cd9c55342a0dcbb",
+		"tarball": "https://registry.npmjs.org/@types/jasmine/-/jasmine-2.5.37.tgz"
+	},
+	"readme": "ERROR: No README data found!",
+	"typesPublisherContentHash": "342ad787ae1d9085f9cb2f352460449c601a7fbda833a19bb87aa2787dbc9ec3",
 	"_args": [
 		[
 			{
@@ -43,31 +88,5 @@
 	"_shasum": "15f16040b1106941ec4aeefa3cd9c55342a0dcbb",
 	"_shrinkwrap": null,
 	"_spec": "@types/jasmine@^2.5.36",
-	"_where": "/Users/anthonydresser/Documents/vscode-pgsql/src/views/htmlcontent",
-	"dependencies": {},
-	"description": "TypeScript definitions for Jasmine 2.5",
-	"devDependencies": {
-		"typescript-esbuild": "0.4.5"
-	},
-	"directories": {},
-	"dist": {
-		"shasum": "15f16040b1106941ec4aeefa3cd9c55342a0dcbb",
-		"tarball": "https://registry.npmjs.org/@types/jasmine/-/jasmine-2.5.37.tgz"
-	},
-	"main": "",
-	"maintainers": [
-		{
-			"email": "ryan.cavanaugh@microsoft.com",
-			"name": "types"
-		}
-	],
-	"name": "@types/jasmine",
-	"optionalDependencies": {},
-	"readme": "ERROR: No README data found!",
-	"scripts": {
-		"prepublishOnly": "TypeScriptESBuild 'Source/**/*.ts'"
-	},
-	"type": "module",
-	"typesPublisherContentHash": "342ad787ae1d9085f9cb2f352460449c601a7fbda833a19bb87aa2787dbc9ec3",
-	"typings": "index.d.ts"
+	"_where": "/Users/anthonydresser/Documents/vscode-pgsql/src/views/htmlcontent"
 }
