--- a/Source/views/htmlcontent/package.json
+++ b/Source/views/htmlcontent/package.json
@@ -26,33 +26,33 @@
 		"prepublishOnly": "Build 'Source/**/*.ts'"
 	},
 	"dependencies": {
-		"@angular/common": "~2.1.2",
-		"@angular/compiler": "~2.1.2",
-		"@angular/core": "~2.1.2",
-		"@angular/forms": "~2.1.2",
-		"@angular/http": "~2.1.2",
-		"@angular/platform-browser": "~2.1.2",
-		"@angular/platform-browser-dynamic": "~2.1.2",
-		"@angular/router": "~3.1.2",
-		"@angular/upgrade": "~2.1.2",
-		"angular-in-memory-web-api": "~0.1.13",
-		"copy-paste": "^1.3.0",
-		"core-js": "^2.4.1",
-		"jasmine-core": "~2.4.1",
-		"moment": "^2.15.1",
-		"rangy": "^1.3.0",
-		"reflect-metadata": "0.1.12",
-		"rxjs": "5.0.0-beta.12",
-		"slickgrid": "github:anthonydresser/SlickGrid#2.3.23",
-		"systemjs": "0.19.40",
-		"systemjs-plugin-json": "^0.2.0",
-		"underscore": "^1.8.3",
-		"zone.js": "^0.6.26"
+		"@angular/common": "17.3.6",
+		"@angular/compiler": "17.3.6",
+		"@angular/core": "17.3.6",
+		"@angular/forms": "17.3.6",
+		"@angular/http": "2.1.2",
+		"@angular/platform-browser": "17.3.6",
+		"@angular/platform-browser-dynamic": "17.3.6",
+		"@angular/router": "17.3.6",
+		"@angular/upgrade": "17.3.6",
+		"angular-in-memory-web-api": "0.17.0",
+		"copy-paste": "1.5.3",
+		"core-js": "3.37.0",
+		"jasmine-core": "5.1.2",
+		"moment": "2.30.1",
+		"rangy": "1.3.1",
+		"reflect-metadata": "0.2.2",
+		"rxjs": "7.8.1",
+		"slickgrid": "github:anthonydresser/SlickGrid#2.3.33",
+		"systemjs": "6.15.1",
+		"systemjs-plugin-json": "0.3.0",
+		"underscore": "1.13.6",
+		"zone.js": "0.14.5"
 	},
 	"devDependencies": {
 		"@playform/build": "0.0.7",
 		"@playform/document": "0.0.6",
-		"assert": "^1.4.1"
+		"assert": "2.1.0"
 	},
 	"publishConfig": {
 		"access": "public"
