--- a/Source/views/htmlcontent/typings/jasmine/package.json
+++ b/Source/views/htmlcontent/typings/jasmine/package.json
@@ -55,7 +55,7 @@
 				"escapedName": "@types%2fjasmine",
 				"name": "@types/jasmine",
 				"raw": "@types/jasmine@^2.5.36",
-				"rawSpec": "^2.5.36",
+				"rawSpec": "2.5.36",
 				"scope": "@types",
 				"spec": ">=2.5.36 <3.0.0",
 				"type": "range"
@@ -81,7 +81,7 @@
 		"escapedName": "@types%2fjasmine",
 		"name": "@types/jasmine",
 		"raw": "@types/jasmine@^2.5.36",
-		"rawSpec": "^2.5.36",
+		"rawSpec": "2.5.36",
 		"scope": "@types",
 		"spec": ">=2.5.36 <3.0.0",
 		"type": "range"
