--- a/Source/views/htmlcontent/typings/jasmine/package.json
+++ b/Source/views/htmlcontent/typings/jasmine/package.json
@@ -1,32 +1,12 @@
 {
 	"name": "@types/jasmine",
-	"version": "0.0.1",
-	"private": false,
 	"description": "TypeScript definitions for Jasmine 2.5",
-	"keywords": [
-		"land"
-	],
-	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/LandPostgresql#readme",
-	"bugs": {
-		"url": "HTTPS://GitHub.Com/CodeEditorLand/LandPostgresql/issues"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+HTTPS://github.com/CodeEditorLand/LandPostgresql.git"
-	},
-	"license": "SEE LICENSE IN LICENSE",
-	"author": {
-		"name": "🛬 Land —",
-		"email": "Land@PlayForm.Cloud",
-		"url": "HTTPS://Land.PlayForm.Cloud"
-	},
 	"maintainers": [
 		{
 			"name": "types",
 			"email": "ryan.cavanaugh@microsoft.com"
 		}
 	],
-	"type": "module",
 	"main": "",
 	"typings": "index.d.ts",
 	"directories": {},
@@ -36,13 +16,9 @@
 	},
 	"dependencies": {},
 	"devDependencies": {
-		"@playform/build": "0.0.7",
-		"@playform/document": "0.0.6"
+		"@playform/build": "0.0.7"
 	},
 	"optionalDependencies": {},
-	"publishConfig": {
-		"access": "public"
-	},
 	"dist": {
 		"shasum": "15f16040b1106941ec4aeefa3cd9c55342a0dcbb",
 		"tarball": "https://registry.npmjs.org/@types/jasmine/-/jasmine-2.5.37.tgz"
