--- a/.github/workflows/Node.yml
+++ b/.github/workflows/Node.yml
@@ -61,7 +61,7 @@ jobs:
 
             - uses: pnpm/action-setup@v4.0.0
               with:
-                  version: 8.15.5
+                  version: 9.3.0
                   run_install: |
                       - recursive: true
                         args: [
@@ -100,3 +100,21 @@ jobs:
 
             - run: pnpm install
               working-directory: .
+
+            - uses: actions/setup-node@v4.0.2
+              with:
+                  node-version: ${{ matrix.node-version }}
+                  cache: "pnpm"
+                  cache-dependency-path: ./src/views/htmlcontent/pnpm-lock.yaml
+
+            - run: pnpm install
+              working-directory: ./src/views/htmlcontent
+
+            - uses: actions/setup-node@v4.0.2
+              with:
+                  node-version: ${{ matrix.node-version }}
+                  cache: "pnpm"
+                  cache-dependency-path: ./src/views/htmlcontent/typings/jasmine/pnpm-lock.yaml
+
+            - run: pnpm install
+              working-directory: ./src/views/htmlcontent/typings/jasmine
