--- a/Source/views/htmlcontent/typings/jasmine/package.json
+++ b/Source/views/htmlcontent/typings/jasmine/package.json
@@ -1,4 +1,25 @@
 {
+	"name": "@types/jasmine",
+	"description": "TypeScript definitions for Jasmine 2.5",
+	"maintainers": [
+		{
+			"name": "types",
+			"email": "ryan.cavanaugh@microsoft.com"
+		}
+	],
+	"main": "",
+	"typings": "index.d.ts",
+	"directories": {},
+	"scripts": {},
+	"dependencies": {},
+	"devDependencies": {},
+	"optionalDependencies": {},
+	"dist": {
+		"shasum": "15f16040b1106941ec4aeefa3cd9c55342a0dcbb",
+		"tarball": "https://registry.npmjs.org/@types/jasmine/-/jasmine-2.5.37.tgz"
+	},
+	"readme": "ERROR: No README data found!",
+	"typesPublisherContentHash": "342ad787ae1d9085f9cb2f352460449c601a7fbda833a19bb87aa2787dbc9ec3",
 	"_args": [
 		[
 			{
@@ -43,26 +64,5 @@
 	"_shasum": "15f16040b1106941ec4aeefa3cd9c55342a0dcbb",
 	"_shrinkwrap": null,
 	"_spec": "@types/jasmine@^2.5.36",
-	"_where": "/Users/anthonydresser/Documents/vscode-pgsql/src/views/htmlcontent",
-	"dependencies": {},
-	"description": "TypeScript definitions for Jasmine 2.5",
-	"devDependencies": {},
-	"directories": {},
-	"dist": {
-		"shasum": "15f16040b1106941ec4aeefa3cd9c55342a0dcbb",
-		"tarball": "https://registry.npmjs.org/@types/jasmine/-/jasmine-2.5.37.tgz"
-	},
-	"main": "",
-	"maintainers": [
-		{
-			"email": "ryan.cavanaugh@microsoft.com",
-			"name": "types"
-		}
-	],
-	"name": "@types/jasmine",
-	"optionalDependencies": {},
-	"readme": "ERROR: No README data found!",
-	"scripts": {},
-	"typesPublisherContentHash": "342ad787ae1d9085f9cb2f352460449c601a7fbda833a19bb87aa2787dbc9ec3",
-	"typings": "index.d.ts"
+	"_where": "/Users/anthonydresser/Documents/vscode-pgsql/src/views/htmlcontent"
 }
