--- a/Source/views/htmlcontent/package.json
+++ b/Source/views/htmlcontent/package.json
@@ -1,4 +1,6 @@
 {
+	"name": "htmlcontent",
+	"description": "",
 	"dependencies": {
 		"@angular/common": "~2.1.2",
 		"@angular/compiler": "~2.1.2",
@@ -23,9 +25,7 @@
 		"underscore": "^1.8.3",
 		"zone.js": "^0.6.26"
 	},
-	"description": "",
 	"devDependencies": {
 		"assert": "^1.4.1"
-	},
-	"name": "htmlcontent"
+	}
 }
