--- a/Source/views/htmlcontent/package.json
+++ b/Source/views/htmlcontent/package.json
@@ -2,30 +2,30 @@
 	"name": "htmlcontent",
 	"description": "",
 	"dependencies": {
-		"@angular/common": "~2.1.2",
-		"@angular/compiler": "~2.1.2",
-		"@angular/core": "~2.1.2",
-		"@angular/forms": "~2.1.2",
-		"@angular/http": "~2.1.2",
-		"@angular/platform-browser": "~2.1.2",
-		"@angular/platform-browser-dynamic": "~2.1.2",
-		"@angular/router": "~3.1.2",
-		"@angular/upgrade": "~2.1.2",
-		"angular-in-memory-web-api": "~0.1.13",
-		"copy-paste": "^1.3.0",
-		"core-js": "^2.4.1",
-		"jasmine-core": "~2.4.1",
-		"moment": "^2.15.1",
-		"rangy": "^1.3.0",
-		"reflect-metadata": "0.1.12",
-		"rxjs": "5.0.0-beta.12",
-		"slickgrid": "github:anthonydresser/SlickGrid#2.3.23",
-		"systemjs": "0.19.40",
-		"systemjs-plugin-json": "^0.2.0",
-		"underscore": "^1.8.3",
-		"zone.js": "^0.6.26"
+		"@angular/common": "18.2.0-next.1",
+		"@angular/compiler": "18.2.0-next.1",
+		"@angular/core": "18.2.0-next.1",
+		"@angular/forms": "18.2.0-next.1",
+		"@angular/http": "8.0.0-beta.10",
+		"@angular/platform-browser": "18.2.0-next.1",
+		"@angular/platform-browser-dynamic": "18.2.0-next.1",
+		"@angular/router": "18.2.0-next.1",
+		"@angular/upgrade": "18.2.0-next.1",
+		"angular-in-memory-web-api": "0.18.0",
+		"copy-paste": "1.5.3",
+		"core-js": "4.0.0-alpha.0",
+		"jasmine-core": "5.1.2",
+		"moment": "2.30.1",
+		"rangy": "1.3.1",
+		"reflect-metadata": "0.2.2",
+		"rxjs": "8.0.0-alpha.14",
+		"slickgrid": "github:anthonydresser/SlickGrid#2.3.33",
+		"systemjs": "6.15.1",
+		"systemjs-plugin-json": "0.3.0",
+		"underscore": "1.13.6",
+		"zone.js": "0.14.8"
 	},
 	"devDependencies": {
-		"assert": "^1.4.1"
+		"assert": "2.1.0"
 	}
 }
