--- a/package.json
+++ b/package.json
@@ -431,45 +431,45 @@
 		]
 	},
 	"dependencies": {
-		"applicationinsights": "^1.0.8",
-		"body-parser": "^1.15.2",
-		"comment-json": "^1.1.3",
-		"copy-paste": "^1.3.0",
-		"decompress": "^4.2.0",
-		"ejs": "^2.4.2",
-		"error-ex": "^1.3.0",
-		"figures": "^1.4.0",
-		"fs-extra-promise": "^0.3.1",
+		"applicationinsights": "1.0.8",
+		"body-parser": "1.15.2",
+		"comment-json": "1.1.3",
+		"copy-paste": "1.3.0",
+		"decompress": "4.2.0",
+		"ejs": "2.4.2",
+		"error-ex": "1.3.0",
+		"figures": "1.4.0",
+		"fs-extra-promise": "0.3.1",
 		"getmac": "1.2.1",
-		"http-proxy-agent": "^2.1.0",
-		"https-proxy-agent": "^2.2.1",
-		"jsonc-parser": "^1.0.0",
+		"http-proxy-agent": "2.1.0",
+		"https-proxy-agent": "2.2.1",
+		"jsonc-parser": "1.0.0",
 		"opener": "1.4.2",
-		"plist": "^2.1.0",
-		"pretty-data": "^0.40.0",
-		"request": "^2.73.0",
+		"plist": "2.1.0",
+		"pretty-data": "0.40.0",
+		"request": "2.73.0",
 		"semver": "https://registry.npmjs.org/semver/-/semver-5.0.3.tgz",
-		"tmp": "^0.0.28",
-		"underscore": "^1.8.3",
-		"ws": "^1.1.1"
+		"tmp": "0.0.28",
+		"underscore": "1.8.3",
+		"ws": "1.1.1"
 	},
 	"description": "Develop Postgres everywhere",
 	"devDependencies": {
-		"chai": "^3.5.0",
-		"coveralls": "^2.11.15",
-		"decache": "^4.1.0",
-		"del": "^2.2.1",
-		"jasmine-core": "~2.4.1",
-		"karma": "^1.3.0",
-		"karma-coverage": "^1.1.1",
-		"karma-htmlfile-reporter": "^0.3.4",
-		"karma-jasmine": "^1.0.2",
-		"karma-jasmine-html-reporter": "^0.2.2",
-		"karma-junit-reporter": "^1.1.0",
-		"systemjs-builder": "^0.15.32",
-		"typemoq": "^1.7.0",
+		"chai": "3.5.0",
+		"coveralls": "2.11.15",
+		"decache": "4.1.0",
+		"del": "2.2.1",
+		"jasmine-core": "2.4.1",
+		"karma": "1.3.0",
+		"karma-coverage": "1.1.1",
+		"karma-htmlfile-reporter": "0.3.4",
+		"karma-jasmine": "1.0.2",
+		"karma-jasmine-html-reporter": "0.2.2",
+		"karma-junit-reporter": "1.1.0",
+		"systemjs-builder": "0.15.32",
+		"typemoq": "1.7.0",
 		"uglify-js": "mishoo/UglifyJS2#harmony-v2.8.22",
-		"xmldom": "^0.1.27",
+		"xmldom": "0.1.27",
 		"yargs": "https://registry.npmjs.org/yargs/-/yargs-3.32.0.tgz"
 	},
 	"displayName": "PostgreSQL",
