--- a/Source/views/htmlcontent/package.json
+++ b/Source/views/htmlcontent/package.json
@@ -1,23 +1,23 @@
 {
 	"dependencies": {
-		"@angular/common": "19.0.0-next.1",
-		"@angular/compiler": "19.0.0-next.1",
-		"@angular/core": "19.0.0-next.1",
-		"@angular/forms": "19.0.0-next.1",
-		"@angular/http": "8.0.0-beta.10",
-		"@angular/platform-browser": "19.0.0-next.1",
-		"@angular/platform-browser-dynamic": "19.0.0-next.1",
-		"@angular/router": "19.0.0-next.1",
-		"@angular/upgrade": "19.0.0-next.1",
+		"@angular/common": "18.2.1",
+		"@angular/compiler": "18.2.1",
+		"@angular/core": "18.2.1",
+		"@angular/forms": "18.2.1",
+		"@angular/http": "7.2.16",
+		"@angular/platform-browser": "18.2.1",
+		"@angular/platform-browser-dynamic": "18.2.1",
+		"@angular/router": "18.2.1",
+		"@angular/upgrade": "18.2.1",
 		"angular-in-memory-web-api": "0.18.0",
 		"copy-paste": "1.5.3",
-		"core-js": "4.0.0-alpha.0",
+		"core-js": "3.38.1",
 		"jasmine-core": "5.2.0",
 		"moment": "2.30.1",
 		"rangy": "1.3.1",
 		"reflect-metadata": "0.2.2",
-		"rxjs": "8.0.0-alpha.14",
-		"slickgrid": "github:anthonydresser/SlickGrid#2.3.33",
+		"rxjs": "7.8.1",
+		"slickgrid": "5.12.0",
 		"systemjs": "6.15.1",
 		"systemjs-plugin-json": "0.3.0",
 		"underscore": "1.13.7",
