--- a/package.json
+++ b/package.json
@@ -432,7 +432,7 @@
 	},
 	"dependencies": {
 		"applicationinsights": "3.2.2",
-		"body-parser": "2.0.0-beta.2",
+		"body-parser": "1.20.2",
 		"comment-json": "4.2.5",
 		"copy-paste": "1.5.3",
 		"decompress": "4.2.1",
