--- a/Source/views/htmlcontent/package.json
+++ b/Source/views/htmlcontent/package.json
@@ -1,4 +1,6 @@
 {
+	"name": "htmlcontent",
+	"description": "",
 	"dependencies": {
 		"@angular/common": "18.2.7",
 		"@angular/compiler": "18.2.7",
@@ -23,9 +25,7 @@
 		"underscore": "1.13.7",
 		"zone.js": "0.15.0"
 	},
-	"description": "",
 	"devDependencies": {
 		"assert": "2.1.0"
-	},
-	"name": "htmlcontent"
+	}
 }
